1. fix footer height for computers in portrait orientation 2. add background and change font family for slider 3. change font size for main page front container element one 4. change logo size - it was too small when screen size was medium 5. fix some justify isseus on elements in subpages

--- a/src/style/components/footer.scss
+++ b/src/style/components/footer.scss
@@ -95,6 +95,11 @@
 }
 //below rules apply if the browser not support mentioned in brackets, which is characteristic only for IE and EDGE version <=44
 @supports not (-ms-ime-align: auto) {
+	@media (min-width: 37rem) and (orientation: portrait) {
+		.footer {
+			height: 100vh;
+		}
+	}
 	@media (min-width: 52rem) and (pointer: none) {
 		//set rules for ipad's devices with high resolution and no pointing device
 		.footer {
